jobs_styles.css
/*

Filename: Disha Anchan

Author: Disha Anchan

Created: 11/09/2025

Last modified: 23/09/2025

Description: CSS sheet for jobs.html
*/

/*General Body Styling*/
body {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 16px;
    margin: 0em;
    padding: 0em;
    background-color: #0a0f1a;
    color: #e7edf5;
    line-height: 1.6;
}

/*General Styling for Footer and Header*/

.header {
    display: flex;
    justify-content: space-between;
    padding: 0.75em 13em;
    background-color:  #0f1626;
    border: 1px solid #233142;
}

/* Header Styling*/
.header-inner {
    display: flex;
    align-items: center; 
    justify-content: space-between;
}

.header-brand {
    display: inline-flex; 
    align-items: end;
    gap: 0.75rem;
    text-decoration: none;
    color: #e7edf5;
}

.header-text { 
    display: grid;
}

.header-name { 
    font-weight: 700; 
    letter-spacing: 0.2px; 
}
.header-slogan { 
    font-size: 0.9rem; 
    color: #a8b3c7
}

.menu {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0em 0.3em;
    margin: 0em;

}

.menu ul{
    display: contents;
}

.menu li {
    display: inline-flex;
    list-style-type: none;
    margin: 0em 0.5em;
    padding: 0em;
}

.menu li:nth-child(2) {
    border: #00e5ff 2px solid;
    border-radius: 0.5em;
}

.menu a {
    display: block;
    text-decoration: none;
    color: #e7edf5;
    font-size: 16px;
    margin: 0em;
    padding: 0.3em 0.75em;
}

.menu a:hover {
    color: #90c5cb;
    background-color: #233142;
    border-radius: 0.5em;

}

/*Main Content Styling*/

main {
    margin: 0em;
    padding: 2em 2em 0.5em;
    background-color:   #0a0f1a;
    border: 1px solid #233142;
}

main h1 {
    display: inline-block;
    color:  #e7edf5;
    margin: 0.5em 0em;
    font-size: 28px;
}

/*Aside  Element Styling*/

.join-us {
    width: 25%;
    float: right;
    padding: 0.5em 0.5em 0.5em;
    margin: 4em 0.5em 0em 0.5em;
    border-radius: 1em;
    background-color:#0a0f1a;
    border: #00e5ff 1px solid;
}

.join-us h2 {
    color: #e7edf5;
    font-size: 18px;
    margin: 0.5em 0.5em 0em;
    padding: 0em;
}

.join-us li {
    margin: 0.3em 0em;
    padding: 0em;
    list-style-type: disc;
}

/* Job Description Layout */

.job-position {
    width: 70%;
    margin: 0em;
    padding: 0em 1em;
}

.job-position h2 {
    color: #e7edf5;
    display: inline-block;
    font-size: 24px;
    margin: 0em;
    padding: 0em;
}

.job-details h3, .job-desc h3, .key-resp h3, .job-req h3, .job-req h4 {
    color:  #e7edf5;
    font-size: 20px;
    margin: 1em 1em 0.5em;
}

.job-details strong {
    color:  #e7edf5;
    margin: 0em 0.5em 0em 1em;
    
}

.key-resp ol {
    margin: 0em 3em;
    padding: 0em 2em;
}

.job-req h5 {
    color:  #e7edf5;
    font-size: 18px;
    margin: 1em 1em 0.5em;
}

.job-req ul {
    display: inline-block; 
}

.job-position p {
    margin: 0em 1em;
}

/* Apply now Button */

.apply-btn {
    display: inline-block;
    margin: 1em 0em 0em;

}

.apply-btn button {
    border-radius: 0.7em;
    background: linear-gradient(90deg, #00e5ff, #7c4dff);
    color: #001018;
    margin: 0em;
    padding: 1.2em;
    font-size: 18px;
    font-weight: bold;
    border: 1px solid #233142;

}

.apply-btn button:hover {
    background: linear-gradient(90deg, #a4f3fd, #c8b5fc);
    color: #233142;
}



.footer {
    background-color:  #0f1626;
    border: 1px solid #233142;
    padding: 0.5em;
    
    display: grid;
    grid-template-columns: 33% 33% 33%;
    grid-gap: 5px;
    justify-content: space-evenly;
}

    /* Footer */
    .site-footer {
    border-top: 1px solid #233142;
    background: #0b1220;
    margin-top: 3rem;
    }

    .footer-inner { 
        padding: 1rem 0 2rem; 
    }
    .footer-links { 
        list-style: none; 
        padding: 0; 
        margin: 0.25rem 0 0; 
        display: flex; 
        gap: 1rem;
    }
    .footer-links a, .site-footer a { 
        color: #00e5ff
    }

/* Media Query for responsive design */
@media (max-width: 800px) {
    .header {
        width: 50%;
    }
    
    header h1 {
        display: block;
        font-size: 28px;
        text-align: center;
    }

    header nav {
        display: block;
        text-align: center;
        margin: 0.5em 1em;
    }

    header li {
        text-align: center;
        margin: 0em 2em;
    }

    .job-position {
        width: 90%;
    }

    .job-position ol {
        margin: 0em 1em;

    }

    .sidebar {
        width: 90%;
        float: none;
        margin: 1em 0em 1em 0.5em;
    }

}

